# ComfyUI-Krea2-Regional

./: .comfyignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  __init__.py  caption_utils.py  ideogram_bridge.py  krea2_builder.py  krea2_latent.py  krea2_regional.py  pyproject.toml  qwen_captioner_prompt.txt  server_routes.py  test_bridge.py  test_builder.py  test_caption_payload.py  test_latent.py  test_nodes.py  test_server_routes.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: krearegional.json  tests.yml
docs/: ARCHITECTURE.md
web/js/: krea2_builder.js
